feat: logout | todo : impl qr
