# docs/swagger.json
@@ -145,6 +145,46 @@
                     }
                 }
             }
+        },
+        "/message/logout": {
+            "post": {
+                "description": "Send New Message to Desired Number",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Send Message",
+                "parameters": [
+                    {
+                        "description": "Message data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.ResponseMessage"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
